# binfo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  makefile
include/: BinaryManager.hpp  BinaryManagerElf32.hpp  BinaryManagerElf64.hpp  BinaryManagerNT32.hpp  BinaryManagerNT64.hpp  Executables.hpp  binfo.hpp  linuxstructs.h  linuxtypes.h  winstructs.h  wintypes.h
refs/: main.cpp
src/: binfoCommon.cpp  binfoFile.cpp  binfoLinux.cpp  binfoWindows.cpp
tests/: test.cpp
